--- a/src/components/Header2/Header2.css
+++ b/src/components/Header2/Header2.css
@@ -13,10 +13,11 @@
 .header2-contents{
     box-sizing: border-box;
     height: 4rem;
-    width: 75rem;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+   
     /* padding: 0 2rem; */
 }
 .logo2{
