--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,7 +21,7 @@
     height: 3rem;
 }
 .pages-link{
-    width: 40rem;
+    width: 100%;
     height: 4.5rem;
     
     background-color: rgb(255, 255, 255);
