--- a/src/components/Search Content/SearchContent.css
+++ b/src/components/Search Content/SearchContent.css
@@ -1,18 +1,29 @@
 .search-content-container{
-    /* background-color: red; */
+    background-color: red;
+    border : 5px solid yellow;
     background-image:  linear-gradient(#051423, #15457b);
     height: 19rem;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
-    align-items: baseline; 
+    align-items: baseline;
+    overflow-y:hidden;
+}
+
+@media  screen and (max-width:700px) {
+    .search-content-container{
+        flex-wrap: wrap;
+    }
+    .search-content{
+        flex-wrap: wrap;
+    }
 }
 .search-content{
     box-sizing: border-box;
-    /* width: 75rem; */
-    width: min(90%, 75rem);
+    width: 100%;
     padding: 3.5rem 2rem 2rem 2rem;
-    background-color: white;
+    /* background-color: white; */
+    background-color: pink;
     border-radius: 1rem;
     box-shadow: 0 1px 7px 0 rgba(0,0,0,.2);
     font-family: Calibri;
@@ -25,7 +36,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90%;
     /* position: relative; */
 }
 .trip-type, .room-type{
@@ -52,21 +62,26 @@
     cursor: pointer;
 }
 .trip-details, .room-details{
-    /* width: 71rem; */
-    /* height: 7rem; */
-    /* width: 1100px; */
-    width: 90%;
+    width: 71rem;
+    height: 7rem;
     margin-top: 1rem;
     /* background-color: blue; */
     border: solid 1px #e7e7e7;
     border-radius: 10px;
     display: grid;
-    grid-template-columns: repeat(4,25%);
+    grid-template-columns: repeat(4,1fr);
 }
+
+@media  screen and(max-width: 700px) {
+    .trip-details{
+        grid-template-columns: 1fr;
+    }
+}
+
 .trip-details-input, .room-details-input{
     box-sizing: border-box;
     height: 7rem;
-    /* width: 17.72rem; */
+    width: 17.72rem;
     display: flex;
     flex-direction: column;
     border-right: solid 1px #e7e7e7;
@@ -178,26 +193,4 @@
 }
 #search-btn:active{
     transform: scale(1);
-}
-
-
-.hotels-tickets-container{
-    width: 100vw;
-    /* background-color: #e5eef4; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.hotels-tickets-container h1{
-    color: #393d3f;
-    font-family: cursive;
-}
-.hotels-tickets{
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-@media screen and (max-width: 970px){
-    
 }
