--- a/src/components/Header2/Header2.css
+++ b/src/components/Header2/Header2.css
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     z-index: 2;
+    border-radius: 5px;
 }
 .header2-contents{
     box-sizing: border-box;
