--- a/src/components/Search Content/SearchContent.css
+++ b/src/components/Search Content/SearchContent.css
@@ -1,29 +1,44 @@
 .search-content-container{
     background-color: red;
-    border : 5px solid yellow;
+    /* border : 5px solid yellow; */
     background-image:  linear-gradient(#051423, #15457b);
-    height: 19rem;
+    /* height: 19rem; */
+    /* height: calc(max-content + 200px); */
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: baseline;
-    overflow-y:hidden;
+    padding: 20px;
+    /* overflow-y:hidden; */border-radius: 10px;
+}
+.main{
+    margin-top:70px;
 }
 
-@media  screen and (max-width:700px) {
+@media  screen and (max-width:1060px) {
+    #main{
+    height: 100%;
+
+    }
     .search-content-container{
         flex-wrap: wrap;
+        margin-bottom: 20px;
+        padding: 20px;
     }
     .search-content{
         flex-wrap: wrap;
+    }
+    .search-content-container{
+        height: 680px;
+        padding: 20px;
     }
 }
 .search-content{
     box-sizing: border-box;
     width: 100%;
     padding: 3.5rem 2rem 2rem 2rem;
-    /* background-color: white; */
-    background-color: pink;
+    background-color: white;
+    /* background-color: pink; */
     border-radius: 1rem;
     box-shadow: 0 1px 7px 0 rgba(0,0,0,.2);
     font-family: Calibri;
@@ -31,11 +46,14 @@
     display: flex;
     justify-content: center;
     position: relative;
+    height: max-content;
 }
 .search-content-form{
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: max-content;
+    width: 100%;
     /* position: relative; */
 }
 .trip-type, .room-type{
@@ -62,9 +80,12 @@
     cursor: pointer;
 }
 .trip-details, .room-details{
-    width: 71rem;
-    height: 7rem;
+    /* width: 71rem; */
+    /* height: 7rem; */
+    width: 100%;
+    height: max-content;
     margin-top: 1rem;
+    gap: 10px;
     /* background-color: blue; */
     border: solid 1px #e7e7e7;
     border-radius: 10px;
@@ -72,16 +93,23 @@
     grid-template-columns: repeat(4,1fr);
 }
 
-@media  screen and(max-width: 700px) {
+@media screen and (max-width: 1060px) {
     .trip-details{
         grid-template-columns: 1fr;
+    }
+    .trip-details-input, .room-details-input{
+        margin: 0 auto;
+        border: none;
+        border-right: none !important;
+    }
+    .main{
+        margin-top: 60px;
     }
 }
 
 .trip-details-input, .room-details-input{
     box-sizing: border-box;
     height: 7rem;
-    width: 17.72rem;
     display: flex;
     flex-direction: column;
     border-right: solid 1px #e7e7e7;
@@ -133,7 +161,7 @@
 .departure-display, .return-display, .check-in-display, .check-out-display{
     box-sizing:border-box;
     width: 17.71rem;
-    height: 5.1rem;
+    /* height: 5.1rem; */
     margin: 0;
     background-color:inherit;
     font-size: larger;
@@ -193,4 +221,7 @@
 }
 #search-btn:active{
     transform: scale(1);
+}
+.flights{
+    width: 90%;
 }
