--- a/src/pages/Hotels/Hotels.css
+++ b/src/pages/Hotels/Hotels.css
@@ -1,5 +1,5 @@
 .hotels-tickets-container{
-    width: 100vw;
+    width: 100%;
     /* background-color: #e5eef4; */
     display: flex;
     flex-direction: column;
@@ -10,7 +10,7 @@
     font-family: cursive;
 }
 .hotels-tickets{
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
