--- a/src/pages/Trains/Trains.css
+++ b/src/pages/Trains/Trains.css
@@ -1,5 +1,5 @@
 .trains-tickets-container{
-    width: 100vw;
+    width: 100%;
     /* background-color: #e5eef4; */
     display: flex;
     flex-direction: column;
@@ -10,7 +10,7 @@
     font-family: cursive;
 }
 .trains-tickets{
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
