--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,15 +5,18 @@ body{
     /* width: 100vw; */
     /* background-color: #e5eef4; */
     width: 100%;
-    background-color: green;
+    /* background-color: green; */
+    /* background-image: linear-gradient(#051423, #15457b); */
     display: flex;
     justify-content: center;
     padding: 6.5rem 0 0 0;
+    /* height: 360px; */
 }
 .main{
     width: 90%;
     margin: 0 auto;
-    overflow-y: hidden;
+    margin-top: 0px;
+    /* overflow-y: hidden; */
 }
 .routes{
     /* background-color: red; */
