--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header{
-    height: 6.5rem;
+    /* height: 6.5rem; */
     width: 100vw;
     background-color: #051423;
     position: absolute;
@@ -9,19 +9,20 @@
 .header-contents{
     box-sizing: border-box;
     height: 5rem;
-    width: 75rem;
+    width: 100%;
     /* background-color: blue; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* padding: 0 2rem; */
+    padding: 20px;
     position: relative;
+   
 }
 .logo{
     height: 3rem;
 }
 .pages-link{
-    width: 100%;
+    width: 90%;
     height: 4.5rem;
     
     background-color: rgb(255, 255, 255);
@@ -79,4 +80,10 @@
 }
 .user-profile:hover{
     color: aqua;
+}
+
+@media screen and (max-width:1060px){
+    .header-contents{
+        padding: 5px;
+    } 
 }
