--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,10 +1,11 @@
 body{
     margin: 0;
+    padding: 0;
 }
 #main{
-    /* width: 100vw; */
+    width: 100vw;
     /* background-color: #e5eef4; */
-    width: 100%;
+    /* width: 100%; */
     /* background-color: green; */
     /* background-image: linear-gradient(#051423, #15457b); */
     display: flex;
