--- a/src/components/Search Content/SearchContent.css
+++ b/src/components/Search Content/SearchContent.css
@@ -139,7 +139,7 @@
     margin: 0;
     padding-left:1rem;
     padding-top: 0.8rem;
-    width: 50%;
+    /* width: 50%; */
     height: 5.1rem;
     background-color: inherit;
     position: relative;
