--- a/src/components/Fetch Tickets/FetchTickets.css
+++ b/src/components/Fetch Tickets/FetchTickets.css
@@ -60,9 +60,9 @@
     transform: translateY(50%);
 }
 
-#book-btn:hover{
+/* #book-btn:hover{
     transform: scale(1.05);
 }
 #book-btn:active{
     transform: scale(1);
-}
+} */
